--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ workspace.resolver = "2"
 
 [workspace.dependencies]
 anyhow = "1.0"
-# rogalik = { path = "../rogalik" , features = ["serialize"]}
-rogalik = { git = "https://github.com/maciekglowka/rogalik" , features = ["serialize"]}
+rogalik = { path = "../rogalik" , features = ["serialize"]}
+# rogalik = { git = "https://github.com/maciekglowka/rogalik" , features = ["serialize"]}
 log = "0.4"
 wunderkammer = { path = "../wunderkammer", features = ["log"] }
 # wunderkammer = { git = "https://github.com/maciekglowka/wunderkammer", features = ["serialize"] }
