--- a/assets/data/player.yaml
+++ b/assets/data/player.yaml
@@ -67,7 +67,7 @@ Herbalist:
       if tile != Tile::Meadow { return }
 
       let commands  = [];
-      for player in world.get_adjacent_units(entity) {
+      for player in world.get_adjacent_players(entity) {
         commands.push(RuneCommand::ChangeHealth(player, 1));
       }
       commands
@@ -185,7 +185,7 @@ Merchant:
   script: >
     pub fn merchant_spawn(world, entity, _) {
       let commands  = [];
-      for player in world.get_units_with_tag(Tag::FoodProducer) {
+      for player in world.get_players_with_tag(Tag::FoodProducer) {
         commands.push(RuneCommand::ChangeHealth(player, 1));
       }
       commands
@@ -240,7 +240,27 @@ Thief:
   description: >
     On fight start: take all player's food and gain this much health.
 
-# Health bonus units
+Shopkeeper:
+  sprite:
+    atlas: units
+    tag: Shopkeeper
+  tier: 5
+  components:
+    cost: 2
+    health: [2, 2]
+    on_ally_gain_food: "shopkeeper_ally_gain_food"
+    player:
+    trigger_limit: [3, 3]
+  script: >
+    pub fn shopkeeper_ally_gain_food(world, entity, cmd) {
+      if let RuneCommand::ChangeFood(val, Some(other)) = cmd {
+        return RuneCommand::ChangeFood(val, Some(entity));
+      }
+    }
+  description: >
+    When ally yields food, yield the same amount as well.
+
+# Death bonus units
 
 Martyr:
   sprite:
@@ -255,7 +275,7 @@ Martyr:
   script: >
     pub fn martyr_kill(world, entity, _) {
       let commands  = [];
-      for player in world.get_adjacent_units(entity) {
+      for player in world.get_adjacent_players(entity) {
         commands.push(RuneCommand::ChangeHealth(player, 1));
       }
       commands
@@ -283,6 +303,58 @@ Santo Subito:
     }
   description: >
     On kill: increase health of each player's unit by 1.
+
+Mime:
+  sprite:
+    atlas: units
+    tag: Mime
+  tier: 3
+  components:
+    cost: 2
+    health: [1, 1]
+    on_ally_kill: "mime_ally_kill"
+    player:
+  script: >
+    pub fn mime_ally_kill(world, entity, cmd) {
+      if let RuneCommand::Kill(other) = cmd {
+        if world.is_in_front(entity, other) {
+          let position = world.get("position", entity).unwrap();
+          return [
+            RuneCommand::RemoveUnit(entity),
+            RuneCommand::RespawnPlayer(other, position)
+          ];
+        }
+      }
+    }
+  description: >
+    When an ally in front is killed, respawn it in place of self.
+
+Vampire:
+  sprite:
+    atlas: units
+    tag: Vampire
+  tier: 4
+  components:
+    cost: 2
+    health: [2, 2]
+    on_fight: "vampire_fight"
+    player:
+  script: >
+    pub fn vampire_fight(world, entity, _) {
+      if let Some(other) = world.get_player_in_front(entity) {
+        if let Some(health) = world.get("health", other) {
+          let val = health.0;
+          return [
+            RuneCommand::ChangeHealth(other, -val),
+            RuneCommand::ChangeHealth(entity, val),
+          ];
+        }
+      }
+    }
+  description: >
+    On fight start: drain ally's in front health.
+
+# Heal
 
 Bard:
   sprite:
@@ -324,29 +396,4 @@ Clay Statue:
     }
   description: >
     Breaks when damaged.
-
-Mime:
-  sprite:
-    atlas: units
-    tag: Mime
-  tier: 3
-  components:
-    cost: 2
-    health: [1, 1]
-    on_ally_kill: "mime_ally_kill"
-    player:
-  script: >
-    pub fn mime_ally_kill(world, entity, cmd) {
-      if let RuneCommand::Kill(other) = cmd {
-        if world.is_in_front(entity, other) {
-          let position = world.get("position", entity).unwrap();
-          return [
-            RuneCommand::RemoveUnit(entity),
-            RuneCommand::RespawnPlayer(other, position)
-          ];
-        }
-      }
-    }
-  description: >
-    When an ally in front is killed, respawn it in place of self.
 
